updated for new versions of libgif and libpng, added pkgconf flags to makefile

--- a/Make.conf
+++ b/Make.conf
@@ -1,2 +1,6 @@
-error:
-	@echo Please run ./configure first...
+prefix	= /home/pebbles/.local
+bindir	= /home/pebbles/.local/bin
+mandir	= /home/pebbles/.local/man
+infodir	= /home/pebbles/.local/info
+
+LIBS	= 
